overflow trying to fix

--- a/css/footer.css
+++ b/css/footer.css
@@ -13,7 +13,7 @@
 .copyright-text {
     margin-top: 20px;
     margin-bottom: 5px;
-    font-size: 10vw;
+    font-size: 2vw;
 }
 
 .bxl--github {
